{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 7,
  "lineage": "19f1328d-896d-e067-76e2-77c89e028f22",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Igw-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051261939:internet-gateway/igw-0896c66752189ed9a",
            "id": "igw-0896c66752189ed9a",
            "owner_id": "061051261939",
            "tags": {
              "Name": "Igw-Terraform"
            },
            "tags_all": {
              "Name": "Igw-Terraform"
            },
            "vpc_id": "vpc-00810c7722b57d2ae"
          },
          "dependencies": [
            "aws_vpc.Vpc-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Pulic-RT-Terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051261939:route-table/rtb-09fd097a6bbf67622",
            "id": "rtb-09fd097a6bbf67622",
            "owner_id": "061051261939",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0896c66752189ed9a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Pulic-RT-Terra",
              "Service": "Terraform"
            },
            "tags_all": {
              "Name": "Pulic-RT-Terra",
              "Service": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-00810c7722b57d2ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Igw-Terraform",
            "aws_vpc.Vpc-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Pulic-RTA-Terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04125494eb7df1ad8",
            "route_table_id": "rtb-09fd097a6bbf67622",
            "subnet_id": "subnet-002986970084b9f91"
          },
          "dependencies": [
            "aws_internet_gateway.Igw-Terraform",
            "aws_route_table.Pulic-RT-Terra",
            "aws_subnet.Public-Subnet-Terraform",
            "aws_vpc.Vpc-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051261939:security-group/sg-0adb7234d15c5f751",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0adb7234d15c5f751",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "061051261939",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-00810c7722b57d2ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Vpc-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-Subnet-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051261939:subnet/subnet-002986970084b9f91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002986970084b9f91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061051261939",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-Terraform"
            },
            "tags_all": {
              "Name": "Public-Subnet-Terraform"
            },
            "vpc_id": "vpc-00810c7722b57d2ae"
          },
          "dependencies": [
            "aws_vpc.Vpc-Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Vpc-Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061051261939:vpc/vpc-00810c7722b57d2ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-042ab7c784af27422",
            "default_route_table_id": "rtb-041f0554cbafbdfd3",
            "default_security_group_id": "sg-014adf44074ceef5b",
            "dhcp_options_id": "dopt-0efa2dc8017a6538b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00810c7722b57d2ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041f0554cbafbdfd3",
            "owner_id": "061051261939",
            "tags": {
              "Name": "Vpc-Terraform"
            },
            "tags_all": {
              "Name": "Vpc-Terraform"
            }
          }
        }
      ]
    }
  ]
}